Style update to display toolbar correctly on mobile vs mobile web.

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  min-height: 100dvh;
+}
